fix scrollbar issue

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -52,4 +52,5 @@ body {
   background-color: #f4f4f6;
   overscroll-behavior: none;
   user-select: none;
+  overflow-y: hidden;
 }
